docs/7.52/md/abenstring_processing_expr_func.md
---
title: "Expressions and Functions for String Processing"
description: |
  Expressions and functions for character string processing can be processed at many operand positions(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexpression_positions.htm). -   String expressions(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcompute_string.htm)
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_processing_expr_func.htm"
abapFile: "abenstring_processing_expr_func.htm"
keywords: ["do", "if", "data", "abenstring", "processing", "expr", "func"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_working.htm) →  [Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_string.htm) → 

Expressions and Functions for String Processing

Expressions and functions for character string processing can be processed at many [operand positions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexpression_positions.htm).

-   [String expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcompute_string.htm)

-   [String functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_functions.htm)

-   [Regular expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenregular_expressions.htm)

Note

The advantage that the expressions and functions for string processing have over the [statements for character and byte string processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_processing_statements.htm) is that expressions can be specified for all operands, which is only possible to a very limited extent in the statements.

Continue
[string\_exp - String Expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcompute_string.htm)
[String Functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_functions.htm)
[Regular Expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenregular_expressions.htm)